# wikigraph

./: .gitignore  Cargo.toml  README.md
plugin/: wikigraph.vim
server/: Cargo.toml
server/src/: data.rs  utils.rs
server/static/src/: circles.js  graph.js  index.js  nodes.js
server/static/styles/: styles.css
src/: data.rs  main.rs
static/: index.html
static/src/: graph.js  links.js  nodes.js  utils.js
static/styles/: styles.css
