[package]
name = "wikigraph"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde  = { version = "1.0", features = ["derive"] }

markdown    = "1.0.0-alpha.16"
gray_matter = "0.2"

glob    = "0.3"
scraper = "0.18"

rayon   = "1.8"
anyhow  = "1.0"
